# serializer version: 1
# name: test_frame_when_before_hook_running_does_show_spinner
  '''
  iterate #1 · session test-session · 0s elapsed
  ⠋ before hook
  ○ prepare
  ○ passes
  ○ judge (3 metrics · geomean primary)
  ○ confirm (only if a gating metric regresses)
  ○ record (then after hook)
  '''
# ---
# name: test_frame_when_both_worktrees_prepared_does_show_elapsed
  '''
  iterate #1 · session test-session · 5s elapsed
  ✓ prepared 5s
  ○ passes
  ○ judge (3 metrics · geomean primary)
  ○ confirm (only if a gating metric regresses)
  ○ record
  '''
# ---
# name: test_frame_when_confirm_finished_does_show_summary_on_node_line
  '''
  iterate #1 · session test-session · 20s elapsed
  ○ prepare
  ○ passes
  ✓ judged +2.0% on geomean · 1 regressed: x
  ✓ confirmed 4/4 · regressions reproduced 14s
  ○ record
  '''
# ---
# name: test_frame_when_confirm_runs_after_an_alerting_judge_does_show_its_progress_row
  '''
  iterate #1 · session test-session · 6s elapsed
  ○ prepare
  ○ passes
  ! judged +2.5% on geomean · 1 regressed: latency
  ⠴ confirming 1 metric · baseline                                0/10 00:06/--:--
  ○ record
  '''
# ---
# name: test_frame_when_confirm_skipped_after_a_regression_does_keep_a_skipped_confirm_row
  '''
  iterate #1 · session test-session · 0s elapsed
  ○ prepare
  ○ passes
  ✓ judged +2.0% on geomean · 1 regressed: latency
  – confirm skipped (only if a gating metric regresses)
  ✓ recorded regressed suggested
  '''
# ---
# name: test_frame_when_header_before_first_pass_completes_does_show_elapsed_without_eta
  '''
  iterate #1 · session test-session · 10s elapsed
  ✓ prepared
  ⠧ sampling · baseline                                           0/10 00:03/--:--
  ○ judge (3 metrics · geomean primary)
  ○ confirm (only if a gating metric regresses)
  ○ record
  '''
# ---
# name: test_frame_when_initial_does_show_all_nodes_pending
  '''
  iterate #3 · session abc-123
  ○ prepare
  ○ passes
  ○ judge (4 metrics · cpu:fire:total primary)
  ○ confirm (only if a gating metric regresses)
  ○ record
  '''
# ---
# name: test_frame_when_judge_finished_after_started_does_show_elapsed
  '''
  iterate #1 · session test-session · 10s elapsed
  ✓ prepared
  ✓ sampled 2 passes 5s
  ✓ judged -3.2% on cpu:fire:total · 1 regressed: lat:100:p99#time 4s
  ○ confirm (only if a gating metric regresses)
  ○ record
  '''
# ---
# name: test_frame_when_judge_finished_does_style_regressed_names_in_judge_row[one]
  list([
    tuple(
      '-3.2% on geomean · 1 regressed: ',
      'dim',
    ),
    tuple(
      'latency',
      '',
    ),
  ])
# ---
# name: test_frame_when_judge_finished_does_style_regressed_names_in_judge_row[several-capped-with-bracket]
  list([
    tuple(
      '-3.2% on geomean · 4 regressed: node/',
      'dim',
    ),
    tuple(
      'access',
      '',
    ),
    tuple(
      '#time, ',
      'dim',
    ),
    tuple(
      'parse[json]',
      '',
    ),
    tuple(
      ', ',
      'dim',
    ),
    tuple(
      'throughput',
      '',
    ),
    tuple(
      ', …',
      'dim',
    ),
  ])
# ---
# name: test_frame_when_judge_finished_does_style_regressed_names_in_judge_row[zero]
  list([
    tuple(
      '-3.2% on geomean · no gating regression',
      'dim',
    ),
  ])
# ---
# name: test_frame_when_judge_finished_no_regressions_does_drop_the_confirm_row
  '''
  iterate #1 · session test-session · 6s elapsed
  ✓ prepared
  ✓ sampled 2 passes 5s
  ✓ judged -2.0% on geomean · no gating regression
  ○ record
  '''
# ---
# name: test_frame_when_judge_started_does_show_running_with_elapsed
  '''
  iterate #1 · session test-session · 9s elapsed
  ✓ prepared
  ✓ sampled 2 passes 5s
  ⠴ judging 3 metrics · cpu:fire:total primary 3s
  ○ confirm (only if a gating metric regresses)
  ○ record
  '''
# ---
# name: test_frame_when_passes_mid_run_does_show_pass_progress
  '''
  iterate #1 · session test-session · 01:04/02:24
  ✓ prepared
  ⠧ sampling · baseline ━━━━━━━━                                  2/10 01:03/02:23
  ○ judge (3 metrics · geomean primary)
  ○ confirm (only if a gating metric regresses)
  ○ record
  '''
# ---
# name: test_frame_when_recorded_with_checks_cmd_does_show_gymrat_keep
  '''
  iterate #3 · session test-session · 0s elapsed
  ○ prepare
  ○ passes
  ○ judge (3 metrics · geomean primary)
  ○ confirm (only if a gating metric regresses)
  ✓ recorded unsettled suggested — checks (npm run check && npm test) run at gymrat keep
  '''
# ---
# name: test_frame_when_worktree_preparing_does_name_its_target
  '''
  iterate #1 · session test-session · 0s elapsed
  ⠋ preparing · baseline
  ○ passes
  ○ judge (3 metrics · geomean primary)
  ○ confirm (only if a gating metric regresses)
  ○ record
  '''
# ---
